--- a/www/.htaccess
+++ b/www/.htaccess
@@ -38,7 +38,7 @@ mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
     </filesMatch>
 </IfModule>
 
-<FilesMatch "\.(?i:png|jpg|svg)$">
+<FilesMatch "\.(?i:png|jpg|svg|avif|webp|js)$">
 
   <IfModule mod_headers.c>
     Header set Cache-Control "max-age=172800, public, must-revalidate"
