feat: Integrate payment processor.

--- a/.env.local
+++ b/.env.local
@@ -45,3 +45,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 NODE_PATH=node
 BANK_TOKEN=null
+
+TRUSTPAY_SECRET=secret
+TRUSTPAY_ID=id
+TRUSTPAY_URL=https://amapi.trustpay.eu/mapi5/wire/paypopup
