--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "private": true,
-  "scripts": {
-    "build": "NODE_ENV=production npx webpack --mode=production --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "build-in-docker": "docker exec -it webpack npm run build",
-    "watch": "NODE_ENV=development npx webpack --watch --config=node_modules/laravel-mix/setup/webpack.config.js"
-  },
-  "devDependencies": {
-    "laravel-mix": "^4.0.7",
-    "resolve-url-loader": "^2.3.1",
-    "sass": "^1.15.2",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.7.14"
-  }
+    "private": true,
+    "scripts": {
+        "build": "npx mix --production",
+        "build-in-docker": "docker exec -it webpack npm run build",
+        "watch": "NODE_ENV=development npx webpack --watch --config=node_modules/laravel-mix/setup/webpack.config.js"
+    },
+    "devDependencies": {
+        "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/typography": "^0.5.10",
+        "autoprefixer": "^10.4.16",
+        "laravel-mix": "^6.0.49",
+        "mix-tailwindcss": "^1.3.0",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.5",
+        "vue-template-compiler": "^2.7.16"
+    }
 }
